--- a/src/components/searchItem/searchItem.css
+++ b/src/components/searchItem/searchItem.css
@@ -62,4 +62,50 @@
 
 .siDetails {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.siRating {
+  display: flex;
+  justify-content: space-between;
+}
+
+.siRating > span {
+  font-weight: 500;
+}
+
+.siRating > button {
+  background-color: #003580;
+  color: #fff;
+  padding: 5px;
+  font-weight: bold;
+  border: none;
+}
+
+.siDetailTexts {
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.siPrice {
+  font-size: 24px;
+}
+
+.siTaxOp {
+  font-size: 12px;
+  color: #808080;
+}
+
+.siCheckButton {
+  background-color: #0071c2;
+  color: #fff;
+  font-weight: bold;
+  padding: 10px 5px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
 }
