gallery images completed

--- a/src/pages/hotel/hotel.css
+++ b/src/pages/hotel/hotel.css
@@ -61,6 +61,7 @@
 .hotelImg {
   width: 100%;
   object-fit: cover;
+  cursor: pointer;
 }
 
 .hotelDetails {
@@ -108,5 +109,49 @@
   color: #fff;
   font-weight: bold;
   border-radius: 5px;
+  cursor: pointer;
+}
+
+.slider {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.426);
+  z-index: 999;
+  display: flex;
+  align-items: center;
+}
+
+.sliderWrapper {
+  width: 100%;
+  /* max-width: 1024px; */
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sliderImg {
+  /* width: 100%; */
+  max-width: 1024px;
+  height: 80vh;
+  object-fit: cover;
+}
+
+.close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 30px;
+  color: lightgray;
+  cursor: pointer;
+}
+
+.arrow {
+  margin: 20px;
+  font-size: 50px;
+  color: #d3d3d3;
   cursor: pointer;
 }
